# motionplanning

homework/hw1/HW1files/: collision.py  drawing.py  linespoints.py  pr2puma.py  tables.py
homework/hw2/: astar.py  heapifyTest.py  hw2_anastar.py  hw2_astar.py  log.txt  pathANAStarE8.txt  pathAStarE8.txt  todo.txt  updateKeys.txt
homework/hw2/submission/: anastar.py  generatePlots.py
homework/hw3/: CMakeLists.txt  HW3.py  HW3Smotthing.py  birrt-analysis.txt  calcAvg.py  compTimevsGoal.txt  compTimevsGoal05.txt  goalBias.txt  goalBiasdata.ods  hw3.cpp  hw3_birrt.py  hw3_rrt.py  makeplots.py  rrt.hpp  rrtSmooth30.txt  smoothIterVsPathLen.txt  smoothItervsPathLen.txt
homework/hw3/bid-rrt/: CMakeLists.txt  bid-rrt.cpp  testplugin.py
homework/hw3/birrt/: CMakeLists.txt  birrt.cpp
homework/hw3/hw3cpp/: CMakeLists.txt  hw3.cpp
homework/hw3/rrtconnect/: CMakeLists.txt  Makefile  rrt-nodetree.cpp  rrt-nodetree.hpp  rrtconnect.cpp  testplugin.py
homework/hw3/submission/: hw3_birrt.py  hw3_rrt.py
homework/hw3/submission/birrt/: CMakeLists.txt  birrt.cpp  testplugin.py
homework/hw3/submission/rrtconnect/: CMakeLists.txt  rrtconnect.cpp
homework/hw3/tempplugin/: CMakeLists.txt  testplugin.py
